Part 2 old issues fix